2016-08-02  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Update flag setting when building plugin.

2016-08-02  Edward Jones  <ed.jones@embecosm.com>

	Add a feature extraction only plugin for GCC

	* AUTHORS: Added file.
	* CMakeLists.txt: Likewise.
	* COPYING: Likewise.
	* FeatureExtract.cpp: Likewise.
	* FeatureExtract.h: Likewise.
	* Features.h: Likewise.
	* Plugin.cpp: Likewise.
	* Plugin.h: Likewise.
	* README: Likewise.