@@ -1,3 +1,8 @@
+2016-08-15  Edward Jones  <ed.jones@embecosm.com>
+
+	* CMakeLists.txt: Rename feature_extract_gcc target to
+	gcc_feature_extract
+
 2016-08-02  Edward Jones  <ed.jones@embecosm.com>
 
 	* CMakeLists.txt: Update flag setting when building plugin.
